feat/package.json

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,15 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+.env
+# Dependency directory
+node_modules
+package-lock.json
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
 .DS_Store
-
-# Images
-images/avatars/
-images/captchas/
-images/smileys/
-images/member_photos/
-images/signature_attachments/
-images/pm_attachments/
-
-# For security do not publish the following files
-system/expressionengine/config/database.php
-system/expressionengine/config/config.php
-
-# Caches
-sized/
-thumbs/
-_thumbs/
-*/expressionengine/cache/*
+.idea
+.vscode 
